--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav>
+        <a href="./">
+        </a>
+          <address></address>
+      </nav>
+    </header>
+    <main>
+      <section class="cover">
+        <h1></h1>
+        <div class="description"><p><button></button></p></div>
+      </section>
+      <section class="lots">
+        <h2></h2>
+        <ul>
+          <li><a><article></article></li>
+          <li><a><article></article></li>
+          <li><a><article></article></li>
+        </ul>
+      </section>
+      <section class="about">
+        <div></div>
+        <div>
+          <h2></h2>
+        </div>
+      </section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
