--- a/index.html
+++ b/index.html
@@ -11,32 +11,175 @@
   </head>
   <body>
     <header class="header">
-      <nav>
-        <a href="./">
-        </a>
-          <address></address>
+      <nav class="header_menu">
+        <ul class="header_links-list">
+          <li class="header_links-list-item header__links-list-item_no-bullit">
+            <a class="header__link_active" href="#">главная</a>
+          </li>
+          <li class="header_links-list-item">
+            <a href="#">посмотреть лоты</a>
+          </li>
+          <li class="header_links-list-item"><a href="#">об аукционе</a></li>
+        </ul>
       </nav>
+      <section class="header_logo">
+        <a class="header_logo-image">
+          <img src="./images/logo-black.svg" alt="Лого сайта в шапке" />
+        </a>
+      </section>
+      <section class="address">
+        <address class="header_address">
+          <a href="tel:+99995555555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge наб.">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263- 265, Амстердам</p>
+        </address>
+      </section>
     </header>
     <main>
       <section class="cover">
-        <h1></h1>
-        <div class="description"><p><button></button></p></div>
+        <div class="overlay"></div>
+        <h1 class="cover-title aligned-text letter-spacing-extened">
+          <span class="aligned-text_left">оно</span>
+          <span class="aligned-text_center"
+            >теб<span class="no-letter-spacing">е</span></span
+          ><span class="aligned-text_right"
+            >над<span class="no-letter-spacing">о</span></span
+          >
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">сделать ставку</button>
+        </div>
       </section>
       <section class="lots">
-        <h2></h2>
-        <ul>
-          <li><a><article></article></li>
-          <li><a><article></article></li>
-          <li><a><article></article></li>
+        <h2 class="lots__heading">ЛОТЫ</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card_type_film">
+            <div class="overlay"></div>
+            <p class="card">
+              <a class="card-link" href="#"
+                >Фильм режиссёра, который бросил киношколу</a
+              >
+            </p>
+            <article class="card__text card__text_film">
+              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+            </article>
+          </li>
+          <li class="lots__card-list-item card_type_book">
+            <div class="overlay"></div>
+            <p class="card">
+              <a class="card-link" href="#"
+                >Книга, где описан один скучный день из жизни рекламного
+                агента</a
+              >
+            </p>
+            <article class="card__text card__text_book">
+              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+              переходами на древнеанглийский. В ней одновременно рассказывается
+              о 16 июня 1904 года и об истории литературы, начиная с античных
+              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
+              бы вы поставили на «Улисса» Джеймса Джойса?
+            </article>
+          </li>
+          <li class="lots__card-list-item card_type_picture">
+            <div class="overlay"></div>
+            <p class="card">
+              <a class="card-link" href="#">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </a>
+            </p>
+            <article class="card__text card__text_picture">
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
+              Сколько бы вы на такое поставили, если бы не знали, что это — одна
+              из революционных работ Кандинского?
+            </article>
+          </li>
         </ul>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
       <section class="about">
-        <div></div>
-        <div>
-          <h2></h2>
+        <div class="about__logo">
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Лого в секции об аукционе"
+          />
+        </div>
+        <div class="about__column">
+          <h2 class="about__title">об аукционе</h2>
+          <div class="about__text">
+            <p class="about__text-first-paragraph">
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p class="about__text-second-paragraph">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              <br />
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <address class="address address__position">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge наб.">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#"
+              >главная</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <img
+            class="footer__social-icon"
+            src="./images/yt.svg"
+            alt="Иконка YouTube"
+          />
+          <a class="footer__social-link" href="#"></a>
+        </li>
+        <li class="footer__social-list-item">
+          <img
+            class="footer__social-icon"
+            src="./images/vk.svg"
+            alt="Иконка VK"
+          />
+          <a class="footer__social-link" href="#"></a>
+        </li>
+        <li class="footer__social-list-item">
+          <img
+            class="footer__social-icon"
+            src="./images/pinterest.svg"
+            alt="Иконка Pinterest"
+          />
+          <a class="footer__social-link" href="#"></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
