внесла правки после второго ревью

--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
           <img src="./images/logo-black.svg" alt="Лого сайта в шапке" />
         </a>
       </div>
-      <div class="address">
-        <address class="header__address">
-          <a class="header__address-link_active" href="tel:+99995555555"
-            >+9 999 555 5555</a
-          >
-          <a class="header__address-link_active" href="mailto:info@sobaka.ge"
-            >info@sobaka.ge</a
-          >
-          <p>наб. Принсенграхт 263- 265, Амстердам</p>
-        </address>
-      </div>
+      <address class="address header__address">
+        <a class="address__link_active" href="tel:+99995555555"
+          >+9 999 555 5555</a
+        >
+        <a class="address__link_active" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
     </header>
     <main>
       <section class="cover">
@@ -63,52 +61,52 @@
         <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item card_type_film">
-            <div class="overlay"></div>
             <a class="card-link" href="#">
-              <div class="card">
-                <p class="card__title">
+              <div class="overlay"></div>
+              <article class="card">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </p>
-                <article class="card__text card__text_film">
+                </h3>
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
-                </article>
-              </div>
+                </p>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item card_type_book">
-            <div class="overlay"></div>
             <a class="card-link" href="#">
-              <div class="card">
-                <p class="card__title">
+              <div class="overlay"></div>
+              <article class="card">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </p>
-                <article class="card__text card__text_book">
+                </h3>
+                <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
                   рассказывается о 16 июня 1904 года и об истории литературы,
                   начиная с античных времён. И это всё накладывается на
                   эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
                   Джеймса Джойса?
-                </article>
-              </div>
+                </p>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item card_type_picture">
-            <div class="overlay"></div>
             <a class="card-link" href="#">
-              <div class="card">
-                <p class="card__title">
+              <div class="overlay"></div>
+              <article class="card">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </p>
-                <article class="card__text card__text_picture">
+                </h3>
+                <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
-                </article>
-              </div>
+                </p>
+              </article>
             </a>
           </li>
         </ul>
@@ -124,7 +122,7 @@
         </div>
         <div class="about__column">
           <h2 class="about__title">об аукционе</h2>
-          <div class="about__text">
+          <article class="about__text">
             <p class="about__text_paragraph">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
@@ -142,16 +140,16 @@
               вещи не верил никто, продолжали верить их создатели. И сейчас эти
               лоты стали культовыми.
             </p>
-          </div>
+          </article>
         </div>
       </section>
     </main>
     <footer class="footer">
       <address class="address footer__address">
-        <a class="footer__address-link_active" href="tel:+99995555555"
+        <a class="address__link_active" href="tel:+99995555555"
           >+9 999 555 5555</a
         >
-        <a class="footer__address-link_active" href="mailto:info@sobaka.ge"
+        <a class="address__link_active" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
         >
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
